# WarframeBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  zh_CN.po
.github/workflows/: auto-merge.yml  rust.yml
Blacklist/: Abuser of Vulgar Language.txt  Black Platinum.txt  Taobao Buyers.txt
locale/zh_CN/LC_MESSAGES/: warframe.mo
src/: main.rs
src/api/: alerts.rs  arbitration.rs  archon.rs  event.rs  fissures.rs  invasion.rs  mod.rs  new.rs  nightwave.rs  sortie.rs  steel_path.rs  syndicate.rs  trader.rs  worldstate.rs
src/models/: alert.rs  arbitration.rs  archon.rs  event.rs  fissures.rs  invasion.rs  mod.rs  new.rs  nightwave.rs  sortie.rs  steel_path.rs  syndicate.rs  trader.rs  worldstate.rs
