[package]
name = "warframe_bot"
version = "0.1.0"
authors = ["LJason <ljason@ljason.cn>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/LJason77/WarframeBot"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11"
serde_json = "1.0"
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
