[package]
name = "warframe_bot"
version = "0.2.2"
authors = ["LJason <ljason@ljason.cn>"]
edition = "2021"
rust-version = "1.64"
readme = "README.md"
repository = "https://github.com/LJason77/WarframeBot"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
gettext-rs = "0.7"
reqwest = "0.11"
serde_json = "1"
teloxide = { version = "0.11", features = ["auto-send", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
